# Dakiya

./: .gitignore  LICENSE.md  README.md  SECURITY.md  biome.json  package-lock.json  package.json
Project-documents/: design-docs.txt
client/: biome.json  client.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.prod.json  webpack.config.js
client/src/: index.css  index.html  index.tsx
client/src/app/: app.route.tsx  app.router.tsx  app.tsx  icons.tsx
client/src/exceptions/: exception.ts
client/src/utils/: worker.ts
client/src/workers/: index.ts
docs/: countries.json  database-design.txt  design-docs.txt  language.json  self-signed-ssl-cert-generation.md  timezone.json
notes/: requirement.txt  resources.txt  self-signed-ssl-cert-generation.md
server/: jest.config.js  package.json  server.js  tsconfig-prod.json  tsconfig.json  tsconfig.prod.json  webpack.config.js
server-rust/: Cargo.toml
server-rust/crates/communication/: Cargo.toml
server-rust/crates/communication/src/http/: mod.rs
server-rust/crates/core/: Cargo.toml
server-rust/crates/core/src/: lib.rs
server-rust/crates/storage/: Cargo.toml
server-rust/crates/storage/src/: lib.rs
server-rust/crates/utils/: Cargo.toml
server-rust/crates/utils/src/: lib.rs
server-rust/crates/utils/src/collections/: list.rs  mod.rs
server-rust/src/: main.rs
server/src/: config.ts  env.d.ts  index.ts
server/src/Models/: user-session.ts  user.ts
temp/: abc.txt  bcd.txt  index.js  localhost.crt  localhost.key  simple-peer.js  swagger.ts
temp/public/: index.html  index.js
(+128 files in other folders)
