[package]
name = "Dakiya"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/communication",
    "crates/core",
    "crates/storage",
    "crates/utils"
]

[dependencies]
dakiya-communication = { path = "crates/communication" }
dakiya-core = { path = "crates/core" }
dakiya-storage = { path = "crates/storage" }
dakiya-utils = { path = "crates/utils" }

tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
